--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     border-radius: 10px;
     background-color: hsl(216, 50%, 16%);
     margin-top: 5rem;
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.2), 0 8px 22px 0 rgba(0, 0, 0, 0.19);
 }
 
 .image {
@@ -81,11 +82,12 @@ hr {
     height: 1.5rem;
     border: 1px solid white;
     border-radius: 50%;
+    margin-top: 8px;
 }
 
 .profile h5{
     margin-top: 0.7rem;
-    margin-left: 1rem;
+    margin-left: 0.7rem;
     font-size: 11px;
 }
 
